--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <div class="header__container">
-            <div class="logo-container"><img src="/img/logo.svg" alt="Logo" class="header__logo"></div>
+            <div class="logo-container"><img src="img/logo.svg" alt="Logo" class="header__logo"></div>
             <nav class="header-menu">
             <div class="header__link-underline"><a class="header__link" href="#about">О нас</a><div class="underline"></div></div>
             <div class="header__link-underline"><a class="header__link" href="#theory">Теория</a><div class="underline"></div></div>
@@ -20,7 +20,7 @@
             <div class="header__link-underline"><a class="header__link" href="#contacts">Контакты</a><div class="underline"></div></div>
             </nav>
             <div class="navigation-burger"><span></span></div>
-            <div class="header-socials"><a class="header__social" href="https://www.instagram.com/keratin_ods/"><img src="/img/insta.svg" alt="Instargam"><div class="header__insta-text">instagram<br> @keratin_ods</div></a></div>
+            <div class="header-socials"><a class="header__social" href="https://www.instagram.com/keratin_ods/"><img src="img/insta.svg" alt="Instargam"><div class="header__insta-text">instagram<br> @keratin_ods</div></a></div>
         </div>
     </header>
     <div class="navigation-wrapper">
@@ -37,10 +37,10 @@
             Бле<span class="main-text-accent">s</span>к <br>
             <a href="#contacts" class="base__button">&#9742; Оставить заявку ⮕</a>
         </div>
-        <div class="main__right-container"><img src="/img/img0.jpg" alt="Main photo" class="main__photo"></div>
+        <div class="main__right-container"><img src="img/img0.jpg" alt="Main photo" class="main__photo"></div>
     </section>
     <section class="about-us" id="about">
-        <div class="about__left-container"><img src="/img/logo.jpg" alt="About logo" class="about__photo"></div>
+        <div class="about__left-container"><img src="img/logo.jpg" alt="About logo" class="about__photo"></div>
         <div class="about__right-container">
             <h2>~ O нас ~</h2><br>
             В данном разделе <br>
