--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +8,49 @@
     <title>Keratin ods - Make people happy</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
+
 </head>
+
 <body>
 
     <header class="header">
         <div class="header__container">
             <div class="logo-container"><img src="img/logo.svg" alt="Logo" class="header__logo"></div>
             <nav class="header-menu">
-            <div class="header__link-underline"><a class="header__link" href="#about">О нас</a><div class="underline"></div></div>
-            <div class="header__link-underline"><a class="header__link" href="#theory">Теория</a><div class="underline"></div></div>
-            <div class="header__link-underline"><a class="header__link" href="#practice">Практика</a><div class="underline"></div></div>
-            <div class="header__link-underline"><a class="header__link" href="#contacts">Контакты</a><div class="underline"></div></div>
+                <div class="header__link-underline"><a class="header__link" href="#about">О нас</a>
+                    <div class="underline"></div>
+                </div>
+                <div class="header__link-underline"><a class="header__link" href="#theory">Теория</a>
+                    <div class="underline"></div>
+                </div>
+                <div class="header__link-underline"><a class="header__link" href="#practice">Практика</a>
+                    <div class="underline"></div>
+                </div>
+                <div class="header__link-underline"><a class="header__link" href="#contacts">Контакты</a>
+                    <div class="underline"></div>
+                </div>
             </nav>
             <div class="navigation-burger"><span></span></div>
-            <div class="header-socials"><a class="header__social" href="https://www.instagram.com/keratin_ods/"><img src="img/insta.svg" alt="Instargam"><div class="header__insta-text">instagram<br> @keratin_ods</div></a></div>
+            <div class="header-socials"><a class="header__social" href="https://www.instagram.com/keratin_ods/"><img
+                        src="img/insta.svg" alt="Instargam">
+                    <div class="header__insta-text">instagram<br> @keratin_ods</div>
+                </a></div>
         </div>
     </header>
     <div class="navigation-wrapper">
         <br><br><br><br><br>
-            <div class="header__link-underline"><a class="header__link" href="#about">О нас</a><div class="underline"></div></div>
-            <div class="header__link-underline"><a class="header__link" href="#theory">Теория</a><div class="underline"></div></div>
-            <div class="header__link-underline"><a class="header__link" href="#practice">Практика</a><div class="underline"></div></div>
-            <div class="header__link-underline"><a class="header__link" href="#contacts">Контакты</a><div class="underline"></div></div>
+        <div class="header__link-underline"><a class="header__link" href="#about">О нас</a>
+            <div class="underline"></div>
+        </div>
+        <div class="header__link-underline"><a class="header__link" href="#theory">Теория</a>
+            <div class="underline"></div>
+        </div>
+        <div class="header__link-underline"><a class="header__link" href="#practice">Практика</a>
+            <div class="underline"></div>
+        </div>
+        <div class="header__link-underline"><a class="header__link" href="#contacts">Контакты</a>
+            <div class="underline"></div>
+        </div>
     </div>
     <section class="main-screen">
         <div class="main__left-container">
@@ -42,7 +64,7 @@
     <section class="about-us" id="about">
         <div class="about__left-container"><img src="img/logo.jpg" alt="About logo" class="about__photo"></div>
         <div class="about__right-container">
-            <h2>~ O нас ~</h2><br>
+            <h2 class="h2-about">~ O нас ~</h2><br>
             В данном разделе <br>
             Рассказывается краткая история о нас <br>
             И предлагаемых услугах <br>
@@ -50,6 +72,28 @@
             <a href="#contacts" class="base__button">&#129514; О методиках ⮕</a>
         </div>
     </section>
+    <section class="theory">
+        <div class="theory__left-container">
+            <h2 class="h2-theory">~ Теория ~</h2><br>
+            Существует 3 основных уровня воздействия на волосы в зависимости от первоначального состояния волос и желаемого эффекта:<br>
+            <a href="#cold" class="theory-link">~ холодное восстановление</a>;<br>
+            <a href="#keratin" class="theory-link">~ кератин</a>;<br>
+            <a href="#botoks" class="theory-link">~ ботокс</a>.<br>
+            Наглядые фото показаны в следующем разделе.<br><br>
+            <a href="#contacts" class="base__button">&#128188; Результаты ⮕</a>
+        </div>
+        <div class="c-container">
+            <div class="cold" id="cold">Холодное восстановление - самая лёгкая и щадящая процедура.</div>
+        </div>
+        <div class="k-container">
+            <div class="keratin" id="keratin">Кератиновое выпрямление - долговременное укрепление и защита волос с применением наиболее сбалансированных материалов</div>
+        </div>
+        <div class="b-container">
+            <div class="botoks" id="botoks">Ботокс для волос - процедура наибольшего воздействия на структуру волоса</div>
+        </div>
+    </section>
     <script src="js/burger-menu.js"></script>
+
 </body>
+
 </html>
