--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             Существует 3 основных уровня воздействия на волосы в зависимости от первоначального состояния волос и желаемого эффекта:<br>
             <a href="#cold" class="theory-link">~ холодное восстановление</a>;<br>
             <a href="#keratin" class="theory-link">~ кератин</a>;<br>
-            <a href="#botoks" class="theory-link">~ ботокс</a>.<br>
+            <a href="#botoks" class="theory-link">~ ботокс</a>;<br>
+            <a href="#nano" class="theory-link">~ нанопластика</a>.<br>
             Наглядые фото показаны в следующем разделе.<br><br>
             <a href="#contacts" class="base__button">&#128188; Результаты ⮕</a>
         </div>
@@ -90,6 +91,9 @@
         </div>
         <div class="b-container">
             <div class="botoks" id="botoks">Ботокс для волос - процедура наибольшего воздействия на структуру волоса</div>
+        </div>
+        <div class="n-container">
+            <div class="nano" id="nano">Нанопластика - чистая химия!</div>
         </div>
     </section>
     <script src="js/burger-menu.js"></script>
