--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <label for="length">Волосы</label>
                     <div>
                         <input class="input-radio" type="radio" id="lenght1" name="Lenght" value="Короткие">
-                        <label for="length">Короткие</label>
+                        <label for="length">Коротк.</label>
                         <input class="input-radio" type="radio" id="lenght2" name="Lenght" value="Средние">
                         <label for="length">Средние</label>
                         <input class="input-radio" type="radio" id="lenght3" name="Lenght" value="Длинные">
